migrate activator template to giter8 template