@@ -1,24 +1,12 @@
-name := "akka-persistence-mongodb"
-
-version := "1.0"
-
-scalaVersion := "2.11.8"
-
-resolvers += "Sonatype OSS Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots"
-
-libraryDependencies ++= {
-  val akkaVersion = "2.4.12"
-
-  Seq(
-    "com.typesafe.akka" %% "akka-actor" % akkaVersion,
-    "com.typesafe.akka" %% "akka-persistence" % akkaVersion,
-    "com.typesafe.akka" %% "akka-slf4j" % akkaVersion,
-    "ch.qos.logback" % "logback-classic" % "1.1.7",
-    "com.github.ironfish" %% "akka-persistence-mongo"  % "1.0.0-SNAPSHOT",
-    "com.typesafe.akka" %% "akka-testkit" % akkaVersion % "test",
-    "org.scalatest" % "scalatest_2.11" % "3.0.1" % "test",
-    "com.github.dnvriend" %% "akka-persistence-inmemory" % "1.3.14" % "test"
+// This build is for this Giter8 template.
+// To test the template run `g8` or `g8Test` from the sbt session.
+// See http://www.foundweekends.org/giter8/testing.html#Using+the+Giter8Plugin for more details.
+lazy val root = (project in file(".")).
+  settings(
+    name := "akka-persistence-mongodb",
+    test in Test := {
+      val _ = (g8Test in Test).toTask("").value
+    },
+    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   )
-}
-
-mainClass in (Compile, run) := Some("com.knoldus.main.Launcher")
